# blackhole

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  README  Untitled.ipynb  WORKSPACE.bazel  atomic_ids.rs  ecs_test.rs  testdb.sqlite
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: code-change.md  issue.md
.github/workflows/: main.yml
base/: defs.bzl
base/proto/: defs.bzl
base/python/: BUILD.bazel  defs.bzl  log.py  start_tpl.sh
base/rust/: BUILD.bazel  base.rs  defs.bzl  lib.rs  logging.rs
base/rust/clock/: BUILD.bazel
base/rust/context/: BUILD.bazel  context.rs
base/rust/log/: log.rs
base/rust/raw_pointer/: BUILD.bazel  raw_pointer.rs
base/rust/token/: BUILD.bazel  token.rs
base/templating/: BUILD.bazel  defs.bzl  jinja_template_renderer.py
base_rust/: BUILD.bazel  base.rs
bazelrc/: container_rules.bazelrc  convenience.bazelrc  correctness.bazelrc
c_practice/ch3/: state.h
c_practice/ch4/: switch.c
c_practice/ch6/: primes
c_practice/utility/: utility.c  utility.h
common/: defs.bzl
common/c/: BUILD.bazel  base.c
common/proto/: defs.bzl
common/python/: defs.bzl  jupyter.py
common/rust/: BUILD.bazel  defs.bzl
common/rust/clock/: clock.rs
common/rust/context/: BUILD.bazel
common/rust/do_every/: BUILD.bazel  do_every.rs
common/rust/error/: BUILD.bazel  error.rs
common/templating/: BUILD.bazel  defs.bzl  jinja_template_renderer.py
common/templating/examples/: BUILD.bazel  config.yaml  dep_config.yaml  py_example.py  rust_example.rs
cyclone-rs/: Cargo.toml  build.rs
cyclone-rs/src/: lib.rs  main.rs
friend_zone/: .dockerignore  .gitignore  docker-compose.yml
friend_zone/front_end/: BUILD.bazel
friend_zone/frontend/: package-lock.json  (+3 more)
friend_zone/minecraft/backup_worker/: BUILD.bazel  backup_worker.py
friend_zone/minecraft_backup_worker/: BUILD.bazel  backup_worker.py  docker-compose.yml  makefile  minecraft_backup_worker.py
friend_zone/rest_api/: BUILD.bazel  makefile  rest_api.py
led_scream/: BUILD.bazel  main.py
notebooks/: BUILD.bazel  start.sh
practice/: BUILD.bazel  README.md
practice/clap/: clap.rs
practice/math_parser/: BUILD.bazel  main.py
practice/protos/: my_proto.rs
practice/python_kafka/: config.ini
practice/redis_py/: BUILD.bazel
practice/rust_tokio_channels/: main.rs
practice/templates/: template.yaml
practice/tokio_state_machine/: BUILD.bazel  main.rs
practice/tokio_tut/: BUILD.bazel  main.rs
practice/vite-lit/: package.json
projects/: BUILD  test.toml  test.yaml
projects/component/: BUILD.bazel  component.rs
projects/dump/python_kafka/: BUILD.bazel  consumer.py
projects/dump/tokio_state_machine/: BUILD.bazel
projects/friend_zone/minecraft_backup_worker/: BUILD.bazel
projects/friend_zone/rest_api/: BUILD.bazel
protos/: BUILD.bazel  person.proto  py_test_bin.py
provision/: install_bazel.sh  install_buildifier.sh  install_docker.sh  install_go.sh  install_kubernetes.sh  setup.sh
py_notebooks/: BUILD.bazel  start.sh
py_notebooks/notebooks/: .gitignore
py_notebooks/notebooks/.ipynb_checkpoints/: my_notebook-checkpoint.ipynb
py_notebooks/notebooks/solar_sim/: create_from_eph.ipynb  jplephem_test.ipynb
py_notebooks/notebooks/user/: .gitignore  README.md
py_notebooks/notebooks/user/.ipynb_checkpoints/: my_notebook-checkpoint.ipynb
python_kafka/: BUILD.bazel  docker-compose.yml  main.py
python_solar_sim/: Makefile  README.md  requirements.txt
python_solar_sim/sim/: BUILD.bazel  const.py  main.py  system.py  util.py
redis_py/: pubsub.py
rocket/: BUILD.bazel  main.rs
rocket/ground_element/: .gitignore  index.html  package-lock.json  package.json  rollup.config.js  tsconfig.json
rocket/ground_element/src/app/: app.ts
rocket/ground_element/src/base/: base.ts
rocket/ground_element/src/themes/: index.css
rocket/ground_element/themes/: themes.css
rocket/state_machine/: main.rs
rust_event_sourcing/: BUILD.bazel  main.rs
scripts/: install_certbot.sh  install_rust.sh
solar_sim/: BUILD.bazel
solar_sim/sim/: BUILD.bazel  const.py
src/benchmarking/: Cargo.toml
src/nucleus/: Cargo.toml  README
src/nucleus/benches/: main.rs
src/nucleus/crates/common/: Cargo.toml  logging.txt
src/nucleus/crates/common/src/: interactive.rs  lib.rs  thread_manager.rs
src/nucleus/crates/examples/: Cargo.toml
src/nucleus/crates/examples/src/: basic.rs  multi_threaded.rs
src/nucleus/crates/macros/src/: lib.rs
src/nucleus/crates/nucleus/: Cargo.toml
src/nucleus/crates/nucleus/benches/: main.rs
src/nucleus/crates/nucleus/src/: lib.rs
src/nucleus/crates/nucleus_common/: Cargo.toml  logging.txt
src/nucleus/crates/nucleus_common/examples/: basic.rs  main.rs
src/nucleus/crates/nucleus_common/src/: logging.rs  loop_timing.rs  thread_manager.rs
src/nucleus/crates/tests/benches/: main.rs
src/nucleus/src/: common_shared_state.rs  lib.rs  lib2.rs  main.rs
src/nucleus/src/common/: Cargo.toml
src/nucleus/src/common/src/: logging.rs  loop_timing.rs
src/nucleus/src/examples/: Cargo.toml
src/nucleus/src/examples/examples/: basic.rs  multi_threaded.rs  web_server.rs
src/nucleus/src/macros/: Cargo.toml
src/nucleus/src/mut_cell/src/: lib.rs
src/nucleus/src/nucleus/src/: lib.rs
src/nucleus/src/pm/src/: doer.rs  pm.rs  state.rs
src/nucleus/src/tests/: Cargo.toml
src/nucleus/src/tests/benches/: main.rs
super_post/: README.md
tools/: defs.bzl
tools/python/: BUILD.bazel  __init__.py  defs.bzl  image.bzl  log.py
tools/python/application/: BUILD  application.py
tools/python/log/: BUILD
tools/python/sentry/: BUILD  sentry.py
tools/python/zeromq/: BUILD  test.py  zeromq.py
tools/rust/: BUILD.bazel  defs.bzl
tools/rust/as_any/: BUILD.bazel  as_any.rs
tools/rust/context/: BUILD.bazel  context.rs
tools/rust/do_every/: do_every.rs
tools/rust/error/: BUILD.bazel
tools/rust/log/: BUILD.bazel  log.rs
tools/rust/token/: BUILD.bazel  test_token.rs  token.rs
z_event_horizon/: README.md
z_practice/: BUILD.bazel  test.sh
z_practice/protos/: BUILD.bazel
z_practice/python_kafka/: BUILD.bazel
(+296 files in other folders)
