### Python ###
bazel_dep(name = "rules_python", version = "0.27.1")

PYTHON_VERSION = "3.11"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    python_version = PYTHON_VERSION,
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "third_party_py",
    python_version = PYTHON_VERSION,
    requirements_lock = "//third_party/python:requirements_lock.txt",
)

use_repo(pip, "third_party_py")

### Proto ###
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")

### GRPC ##
bazel_dep(name = "grpc", version = "1.48.1.bcr.2")

### Shell ###
bazel_dep(name = "rules_shellcheck", version = "0.2.4")

### C++ ###
bazel_dep(name = "rules_cc", version = "0.0.9")

### Skylib ###
bazel_dep(name = "bazel_skylib", version = "1.5.0")

### Codeowners ###
bazel_dep(name = "rules_codeowners", version = "0.2.1")

### Common Platforms ###
bazel_dep(name = "platforms", version = "0.0.8")

### Templating and config tools ###
bazel_dep(name="bazel_advanced_config")

git_override(
    module_name = "bazel_advanced_config",
    remote = "https://github.com/ConnorJLatham/bazel-advanced-config",
    commit = "29ca358391b8d159974695fbd620a3a653c544a4",
)
