"""
Blackhole is my personal monorepo where I just try stuff out.
"""

### Python ###
bazel_dep(name = "rules_python", version = "0.27.1")

PYTHON_VERSION = "3.11"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    python_version = PYTHON_VERSION,
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "external_py",
    python_version = PYTHON_VERSION,
    requirements_lock = "//tools/python/external:requirements_lock.txt",
)

use_repo(pip, "external_py")

### Proto ###
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")

### GRPC ##
bazel_dep(name = "grpc", version = "1.48.1.bcr.2")

### Shell ###
bazel_dep(name = "rules_shellcheck", version = "0.2.4")

### C++ ###
bazel_dep(name = "rules_cc", version = "0.0.9")

### Skylib ###
bazel_dep(name = "bazel_skylib", version = "1.5.0")

### Codeowners ###
bazel_dep(name = "rules_codeowners", version = "0.2.1")

### Common Platforms ###
bazel_dep(name = "platforms", version = "0.0.8")

### Templating and config tools ###
bazel_dep(name = "bazel_advanced_config")

git_override(
    module_name = "bazel_advanced_config",
    remote = "https://github.com/ConnorJLatham/bazel-advanced-config",
    commit = "b27c027bd7c1b596e095c900c6baf4e619b9bedb",
)

### Packaging ###
bazel_dep(name = "rules_pkg")
git_override(
    module_name = "rules_pkg",
    remote = "https://github.com/bazelbuild/rules_pkg",
    commit = "994a1f5b94f5baa4904d9487622c2908fe44d2d1",
)

### Containers ###
# Fix a bad dep https://github.com/bazel-contrib/rules_oci/pull/449 TODO
bazel_dep(name = "aspect_bazel_lib", version = "1.36.0")

bazel_dep(name = "rules_oci", version = "1.5.1")
# For testing, we also recommend https://registry.bazel.build/modules/container_structure_test

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Declare external images you need to pull, for example:
oci.pull(
    name = "python_base",
    digest = "sha256:79d902e3c05bb26b70c5bdf4942e7e6383b927e29d91349eca306a433ae41050",
    image = "docker.io/library/python",
)

# For each oci.pull call, repeat the "name" here to expose them as dependencies.
use_repo(oci, "python_base")

### Solar Sim Deps ###
download_de440 = use_extension("//projects/solar_sim:download_de440.bzl", "download_de440")
use_repo(download_de440, "de440")

### Rust ###
bazel_dep(name = "rules_rust", version = "0.35.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")

RUST_STABLE_VERSION = "1.75.0"

rust.toolchain(
    edition = "2021",
    versions = [RUST_STABLE_VERSION],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

# crate_repositories = use_extension("//tools/rust/external:extension.bzl", "crate_repositories")
# use_repo(cargo_bazel_bootstrap, "external_rust")
