# workspace(name = "blackhole")




# # Protoc/language proto rules
# http_archive(
#     name = "rules_proto_grpc",
#     sha256 = "fb7fc7a3c19a92b2f15ed7c4ffb2983e956625c1436f57a3430b897ba9864059",
#     strip_prefix = "rules_proto_grpc-4.3.0",
#     urls = ["https://github.com/rules-proto-grpc/rules_proto_grpc/archive/4.3.0.tar.gz"],
# )

# # Docker archive
# http_archive(
#     name = "io_bazel_rules_docker",
#     sha256 = "b1e80761a8a8243d03ebca8845e9cc1ba6c82ce7c5179ce2b295cd36f7e394bf",
#     urls = ["https://github.com/bazelbuild/rules_docker/releases/download/v0.25.0/rules_docker-v0.25.0.tar.gz"],
# )



# ### DOCKER DEPS ###
# load("@io_bazel_rules_docker//repositories:repositories.bzl", container_repositories = "repositories")

# container_repositories()

# load("@io_bazel_rules_docker//repositories:deps.bzl", container_deps = "deps")

# container_deps(
#     # https://github.com/bazelbuild/rules_docker/issues/1902
#     go_repository_default_config = "@//:WORKSPACE.bazel",
# )

# ### PYTHON CONTAINER RULES ###
# load("@io_bazel_rules_docker//python3:image.bzl", py_image_repos = "repositories")

# py_image_repos()
