load("@rules_python//python:defs.bzl", "py_library", "py_binary")
load("@third_party_python//:requirements.bzl", "requirement")

py_binary(
    name="producer",
    srcs=["producer.py"],
    deps=[
        "//base/python:base",
        requirement("confluent-kafka")
    ],
    data = ["config.ini"]
)

py_binary(
    name="consumer",
    srcs=["consumer.py"],
    deps=[
        "//base/python:base",
        requirement("confluent-kafka")
    ],
    data = ["config.ini"]
)