load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "base",
    srcs = [
        "lib.rs",
        "logging.rs",
    ],
    deps = [
       "@third_party_rust//:env_logger",
       "@third_party_rust//:log",
       "@third_party_rust//:eyre",
    ],
)
