load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "base",
    srcs = [
        "lib.rs",
    ],
    deps = [
       "//base/rust/error",
       "//base/rust/log",
       "//base/rust/raw_pointer",
       "//base/rust/clock",
       "//base/rust/context",
       "//base/rust/token",
    ],
)
