load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "base",
    srcs = [
        "lib.rs",
    ],
    deps = [
        "//common/rust/clock",
        "//common/rust/context",
        "//common/rust/error",
        "//common/rust/log",
        "//common/rust/raw_pointer",
        "//common/rust/token",
    ],
)
