load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@third_party_python//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py3_image(
    name= "minecraft_backup_worker",
    srcs = ["minecraft_backup_worker.py"],
    deps = [
        "//base/python:base",
        requirement("dropbox"),
        requirement("schedule")
    ],
)
