load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:private"])

rust_binary(
    name = "tokio",
    srcs = [
        "main.rs",
    ],
    deps = [
       "//base/rust:base",
       "//base/rust/context",
       "//base/rust/raw_pointer",
       "//base/rust/clock",
       "@third_party_rust//:tokio",
    ],
)