load("//common/rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:private"])

rust_library(
    name = "component",
    srcs = [
        "component.rs",
    ],
    deps = [
        "//common/rust/clock",
        "//common/rust/context",
        "//common/rust/raw_pointer",
        "@third_party_rust//:tokio",
    ],
)
