load("//common/rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

package(default_visibility = ["//visibility:private"])

rust_library(
    name = "component",
    srcs = [
        "component.rs",
    ],
    deps = [
        "//common/rust/clock",
        "//common/rust/context",
        "//common/rust/raw_pointer",
        "@third_party_rust//:tokio",
    ],
)

rust_binary(
    name = "run",
    srcs = [
        "component.rs",
    ],
    deps = [
        "//common/rust/clock",
        "//common/rust/context",
        "//common/rust/raw_pointer",
        "@third_party_rust//:tokio",
    ],
)

rust_test(
    name = "test",
    crate = ":component",
)
