load("//tools/rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

package(default_visibility = ["//visibility:private"])

rust_library(
    name = "component",
    srcs = [
        "component.rs",
    ],
    deps = [
        "//tools/rust/clock",
        "//tools/rust/context",
        "//tools/rust/raw_pointer",
        "@third_party_rust//:tokio",
    ],
)

rust_binary(
    name = "run",
    srcs = [
        "component.rs",
    ],
    deps = [
        "//tools/rust/clock",
        "//tools/rust/context",
        "//tools/rust/raw_pointer",
        "@third_party_rust//:tokio",
    ],
)

rust_test(
    name = "test",
    crate = ":component",
)
