load("@rules_python//python:defs.bzl", "py_library", "py_binary")
load("@third_party_python//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        ":solver",
        ":const", 
        ":system", 
        ":util", 
        requirement("astropy"), 
        requirement("jplephem"), 
        requirement("progress")
    ]
)

py_library(
    name = "solver",
    srcs = ["solver.py"],
    deps = [requirement("numpy")]
)

py_library(
    name = "const",
    srcs = ["const.py"],
    deps = [
        requirement("jplephem"),
    ],
    data = [
        "//solar_sim/config:de440.bsp"
    ]
)

py_library(
    name = "system",
    srcs = ["system.py"],
    deps = [
        requirement("numpy"), 
        requirement("astropy"), 
        ":const", 
        ":util", 
        requirement("jplephem")
    ]
)

py_library(
    name = "util",
    srcs = ["util.py"],
    deps = [
        ":const", 
        requirement("PyYAML"),
    ]
)

py_library(
    name = "plotter",
    srcs = ["plotter.py"],
    deps = [
        ":const", 
        requirement("matplotlib")
    ]
)