load("//base/python:defs.bzl", "py_binary", "py_library")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        ":solver",
        ":const",
        ":system",
        ":util",
    ],
    reqs = [
        "astropy",
        "jplephem",
        "progress",
    ],
)

py_library(
    name = "solver",
    srcs = ["solver.py"],
    reqs = ["numpy"]
)

py_library(
    name = "const",
    srcs = ["const.py"],
    reqs = [
        "jplephem",
    ],
    data = [
        "//solar_sim/data:de440.bsp1"
    ]
)

py_library(
    name = "system",
    srcs = ["system.py"],
    deps = [
        ":const", 
        ":util", 
    ],
    reqs = [
        "numpy", 
        "astropy", 
        "jplephem",
    ]
)

py_library(
    name = "util",
    srcs = ["util.py"],
    deps = [
        ":const",
    ],
    reqs = [
        "PyYAML"
    ]
)

py_library(
    name = "plotter",
    srcs = ["plotter.py"],
    deps = [
        ":const",
    ],
    reqs = [
        "matplotlib"
    ],
)