[package]
name = "benchmarking"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
uuid = { version = "1.10.0", features = ["v4"] }

[profile.release]
debug = 1

[build]
rustflags = ["-C", "symbol-mangling-version=v0"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "btree_access"
harness = false
