load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "log",
    srcs = ["log.py"],
)

py_library(
    name = "sentry",
    srcs = ["sentry.py"],
    deps = ["@external_py//sentry_sdk"],
)

py_library(
    name = "base",
    srcs = ["__init__.py"],
    deps = [":log"],
)
