load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "base",
    srcs = [
        "lib.rs",
    ],
    deps = [
        "//tools/rust/clock",
        "//tools/rust/context",
        "//tools/rust/error",
        "//tools/rust/log",
        "//tools/rust/raw_pointer",
        "//tools/rust/token",
    ],
)
