load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//python:defs.bzl", "python_proto_library")
load("@rules_proto_grpc//rust:defs.bzl", "rust_proto_library")
load("//common/python:defs.bzl", "py_binary")
load("@rules_rust//rust:defs.bzl", "rust_binary")

proto_library(
    name = "person_proto",
    srcs = ["person.proto"],
)

python_proto_library(
    name = "py_person_proto",
    protos = [":person_proto"],
)

py_binary(
    name = "py_test_bin",
    srcs = ["py_test_bin.py"],
    deps = [":py_person_proto"],
)

rust_proto_library(
    name = "rust_person_proto",
    protos = [":person_proto"],
)

rust_binary(
    name = "rust_test_bin",
    srcs = ["my_proto.rs"],
    deps = [":rust_person_proto"],
)
