load("//base/python:defs.bzl", "py_binary")
load("@third_party_python//:requirements.bzl", "requirement")

py_binary(
    name="producer",
    srcs=["producer.py"],
    reqs=[
        "confluent-kafka"
    ],
    data = ["config.ini"]
)

py_binary(
    name="consumer",
    srcs=["consumer.py"],
    reqs=[
        "confluent-kafka"
    ],
    data = ["config.ini"]
)