load("//common/python:defs.bzl", "py_binary")

py_binary(
    name = "producer",
    srcs = ["producer.py"],
    data = ["config.ini"],
    reqs = [
        "confluent-kafka",
    ],
)

py_binary(
    name = "consumer",
    srcs = ["consumer.py"],
    data = ["config.ini"],
    reqs = [
        "confluent-kafka",
    ],
)
