load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "context",
    srcs = [
        "context.rs",
    ],
    deps = [
       "//base/rust:base",
       "//base/rust/raw_pointer",
       "@third_party_rust//:clap",
       "@third_party_rust//:arrayvec"
    ],
)