load("//base:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "context",
    srcs = [
        "context.rs",
    ],
    deps = [
       "//base/rust/raw_pointer",
       "@third_party_rust//:clap",
       "@third_party_rust//:arrayvec",
       "@third_party_rust//:uuid",
    ],
)