load("//tools/python:defs.bzl", "py_binary")

py_binary(
    name = "producer",
    srcs = ["producer.py"],
    data = ["config.ini"],
    deps = [
        "@third_party_py//confluent_kafka",
    ],
)

py_binary(
    name = "consumer",
    srcs = ["consumer.py"],
    data = ["config.ini"],
    deps = [
        "@third_party_py//confluent_kafka",
    ],
)
