load("//common/rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:private"])

rust_binary(
    name = "tokio",
    srcs = [
        "main.rs",
    ],
    deps = [
        "//common/rust/clock",
        "//common/rust/context",
        "//common/rust/raw_pointer",
        "@third_party_rust//:tokio",
    ],
)
