load("//base/python:defs.bzl", "py_image")

package(default_visibility = ["//visibility:public"])

py_image(
    name= "minecraft_backup_worker",
    srcs = ["minecraft_backup_worker.py"],
    reqs = [
        "dropbox",
        "schedule"
    ],
    tags = [
        "contron44/minecraft_backup_worker"
    ]
)
