load("//base/python:image.bzl", "py_image_combo")
load("@third_party_python//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

py_image_combo(
    name = "rest_api",
    srcs = ["rest_api.py"],
    main = "rest_api.py",
    deps = [
        "//base/python:base",
        requirement("fastapi"),
        requirement("uvicorn"),
        requirement("redis"),
    ],
)
